--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 		<title>cppDev - cppDeveloper - Pierre Voigtländer</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	        </head>
+	</head>
 	<body>
 		<nav>
-    		<ul>
+    		    <ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/contact">Contact</a></li>
         		<li><a href="/cv">Experiences</a></li>
-            <li><a href="/cv">Knowledge</a></li>
-            <li><a href="/cv">Education</a></li>
-    		</ul>
+                        <li><a href="/cv">Knowledge</a></li>
+                        <li><a href="/cv">Education</a></li>
+    		    </ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>cppDeveloper</h1>
-				<p>Ses <a href="/cv">Experiences...</a></p>
+				<p>See <a href="/cv">Experiences...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
+    		    <ul>
         		<li><a href="mailto:pierre@cppdev.de">email</a></li>
         		<li><a href="https://github.com/jeanreP">github.com/jeanreP</a></li>
-            <li><a href="https://www.cppDev.de">www.cppDev.de</a></li>
-			</ul>
+                        <li><a href="http://www.cppdev.de">www.cppdev.de</a></li>
+	            </ul>
 		</footer>
 	</body>
 </html>
