fix some layout things and change impressum to imprint

--- a/index.html
+++ b/index.html
@@ -36,48 +36,46 @@
                 <li class="menulink"><a class="menulink" href="./index.html#Skills">Skills</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Experiences">Experiences</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Education">Education</a></li>
-                <li class="menulink"><a class="menulink" href="./index.html#Impressum">Impressum</a></li>
+                <li class="menulink"><a class="menulink" href="./index.html#Imprint">Imprint</a></li>
             </ul>
             </div>
         </nav>
-        <div class="white">
-            <table>
-                <tr>
-                    <td><img src="./img/me.jpg" alt="pierre@cppdev.de" width="250"></td>
-                    <td>
-                <p>I am a passionate C++ developer, Conan advocate and Jenkins user.
-                The first Microsoft Visual Studio version I have used was Visual Studio 6.
-                C++ was a dying programming language until 12 August 2011, when the C++11 Standard was approved.
-                Since then I am excited how great the ISO C++ committee works and how fast the C++ community grows.
-                I recommend to attend the <a class="intext" href="https://meetingcpp.com/" target="_blank">Meeting CPP</a> in Berlin where you are able to get in touch with them:
-                </p>
-                <p>
-                <a class="intext" href="https://www.youtube.com/watch?v=OAmWHmwlMwI" target="_blank">"Crazy Code, Crazy Coders" - Walter E. Brown</a><br>
-                <a class="intext" href="https://www.youtube.com/watch?v=YnWhqhNdYyk" target="_blank">"Stop teaching C" - Kate Gregory</a><br>
-                <a class="intext" href="https://www.youtube.com/watch?v=q3WiZu8N7Tk" target="_blank">"C++ Core Guidelines - Modernize your C++ Code Base" - Peter Sommerlad</a>
-                </p>
-            </td>
-            </tr>
-            <table>
+        <div class="white" >
+            <img style="float:left;margin-right:10px;margin-bottom:10px" src="./img/me.jpg" alt="pierre@cppdev.de" height="230">
+            <div class="whitewithheight">
+            <p>I am a passionate C++ developer, Conan advocate and Jenkins user.
+            The first Microsoft Visual Studio version I have used was Visual Studio 6.
+            C++ was a dying programming language until 12 August 2011, when the C++11 Standard was approved.
+            Since then I am excited how great the ISO C++ committee works and how fast the C++ community grows.
+            I recommend to attend the <a class="intext" href="https://meetingcpp.com/" target="_blank">Meeting CPP</a> in Berlin where you are able to get in touch with them:
+            </p>
+            <p>
+            <a class="intext" href="https://www.youtube.com/watch?v=OAmWHmwlMwI" target="_blank">"Crazy Code, Crazy Coders" - Walter E. Brown</a><br>
+            <a class="intext" href="https://www.youtube.com/watch?v=YnWhqhNdYyk" target="_blank">"Stop teaching C" - Kate Gregory</a><br>
+            <a class="intext" href="https://www.youtube.com/watch?v=q3WiZu8N7Tk" target="_blank">"C++ Core Guidelines - Modernize your C++ Code Base" - Peter Sommerlad</a>
+            </p>
+            </div>
         </div>
+        <br><br>
         <div class="white">
-            <h1 class="menu">Contact</h1>
             <a name="Contact"></a>
+            <h1 class="menu">Contact</h1>
+
             <p>As software engineer and freelancer i would be glad to support your software project and C++ project.<br>Do not hesitate to contact me:</p>
             <table>
                 <tr>
-                    <td colspan="2">Dipl.-Inf. Pierre Voigtländer</td>
+                    <td colspan="2"><div>Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/mail.jpg" alt="address" width="20"><br><br></td>
+                    <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
                     <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/phone.png" alt="phone" width="20"></td>
+                    <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
                     <td>+49-162-5878472</td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/email.png" alt="email" width="20"></td>
+                    <td><img src="./img/links/email.png" alt="email" height="20"></td>
                     <td><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
                 </tr>
             </table>
@@ -87,8 +85,9 @@
             <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
         </div>
         <div class="white">
-            <h1 class="menu">Skills</h1>
             <a name="Skills"></a>
+            <h1 class="menu">Skills</h1>
+
             <h2 class="menu">Technical Stack</h2>
             <div class="skillitem">
                 <img src="./img/skills/200px-Visual_Studio_Code_1.35_icon.svg.png" alt="Visual Studio Code" style="padding-right:20px;padding-bottom:20px" height="60">
@@ -128,8 +127,9 @@
             <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
         </div>
         <div class="white">
-            <h1 class="menu">Experiences</h1>
             <a name="Experiences"></a>
+            <h1 class="menu">Experiences</h1>
+            
             <h2 class="menu">Senior Software Developer at <a href="https://www.audi.de" class="intext" target="_blank">AUDI AG</a></h2>
             <div class="skillitem">
                 <div class="expitem">
@@ -259,8 +259,9 @@
             <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
         </div>
         <div class="white">
-            <h1 class="menu">Education</h1>
             <a name="Education"></a>
+            <h1 class="menu">Education</h1>
+            
             <h2 class="menu">Bachelor of Science</h2>
             <div class="skillitem">
                 <div class="expitem">
@@ -291,27 +292,27 @@
             <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
         </div>
         <div class="white">
-            <h1 class="menu">Impressum</h1>
-            <a name="Impressum"></a>
-            Responsible for the content of this website is:
+            <a name="Imprint"></a>
+            <h1 class="menu">Imprint</h1>
+            Responsible for the content of this website is:<br>
             <table>
                 <tr>
-                    <td colspan="2">Pierre Voigtländer</td>
+                    <td colspan="2"><div>Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/mail.jpg" alt="address" width="20"><br><br></td>
+                    <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
                     <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/phone.png" alt="phone" width="20"></td>
+                    <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
                     <td>+49-162-5878472</td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/email.png" alt="email" width="20"></td>
+                    <td><img src="./img/links/email.png" alt="email" height="20"></td>
                     <td><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/email.png" alt="datenschutz-email" width="20"></td>
+                    <td><img src="./img/links/email.png" alt="datenschutz-email" height="20"></td>
                     <td> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
             </table>
