--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li class="menulink"><a class="menulink" href="./index.html#Skills">Skills</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Experiences">Experiences</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Education">Education</a></li>
+                <li class="menulink"><a class="menulink" href="./index.html#Interests">Interests</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Imprint">Imprint</a></li>
             </ul>
             </div>
@@ -61,7 +62,7 @@
             <a name="Contact"></a>
             <h1 class="menu">Contact</h1>
 
-            <p>As software engineer and freelancer i would be glad to support your software project and C++ project.<br>Do not hesitate to contact me:</p>
+            <p>As software engineer and freelancer I would be glad to support your software project and C++ project.<br>Do not hesitate to contact me:</p>
             <table>
                 <tr>
                     <td colspan="2"><div>Dipl.-Inf. Pierre Voigtländer</div></td>
@@ -292,6 +293,18 @@
             <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
         </div>
         <div class="white">
+            <a name="Interests"></a>
+            <h1 class="menu">Interests</h1>
+            After spending my time with my family I am an enthusiastic rower at <a href="https://drci.de" target="_blank" class="intext">Donau Ruder Club Ingolstadt e.v.</a>.
+            There, I take care about the IT, the social media presentation and row on our beautiful Donau river in Ingolstadt in a team or single scull.
+            The most fascinating <a href="https://www.youtube.com/watch?v=mxNThmWIYYU&t=84" target="_blank" class="intext">kind of boat is the 2- (coxless pair)</a> where you really need a good partner you can trust 100 percent. I am glad to found one.
+            <br>
+            <br>
+        </div>
+        <div class="bluetotop">
+            <a class="totop" href="./index.html#top"><img src="./img/links/arrow.png" alt="contact" width="30px" height="17px" style="padding-left:10px"></a>
+        </div>
+        <div class="white">
             <a name="Imprint"></a>
             <h1 class="menu">Imprint</h1>
             Responsible for the content of this website is:<br>
@@ -318,7 +331,7 @@
             </table>
             <br><br>
             <div class="disclaimer">
-                <b>Disclaimer:</b> Contents of external websites on which i am linking direct or indirect (through „hyperlinks“ or „deeplinks“) are
+                <b>Disclaimer:</b> Contents of external websites on which I am linking direct or indirect (through „hyperlinks“ or „deeplinks“) are
                 beyond my responsibility and are not adopted as my own content.
                 When the links were published, I did not have knowledge of any illegal activities or contents on these websites.
                 Since I do not have any control on the contents of these websites, I distance myself from all contents of all linked websites,
