doin some layout things for the language and mobile version

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
                     </tr>
                 </table></li>
             </ul>
+            <div class="white">
+                <ul>
+                    <li class="menulinklang">EN | <a class="menulinklang" href="./index_de.html">DE</a></li>
+                </ul>
+            </div>
             <div class="blue">
             <ul>
-                <li class="menulinklang">EN | <a class="menulinklang" href="./index_de.html">DE</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Contact">Contact</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Skills">Skills</a></li>
                 <li class="menulink"><a class="menulink" href="./index.html#Experiences">Experiences</a></li>
@@ -66,19 +70,19 @@
             <p>As software engineer and freelancer I would be glad to support your software project and C++ project.<br>Do not hesitate to contact me:</p>
             <table>
                 <tr>
-                    <td colspan="2"><div>Dipl.-Inf. Pierre Voigtländer</div></td>
+                    <td class="address" colspan="2"><div>Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td>+49-162-5878472</td>
+                    <td class="address">+49-162-5878472</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
+                    <td class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
                 </tr>
             </table>
             <br>
@@ -311,23 +315,23 @@
             Responsible for the content of this website is:<br>
             <table>
                 <tr>
-                    <td colspan="2"><div>Pierre Voigtländer</div></td>
+                    <td class="address" colspan="2"><div>Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td>+49-162-5878472</td>
+                    <td class="address">+49-162-5878472</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="datenschutz-email" height="20"></td>
-                    <td> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td class="address"> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
             </table>
             <br><br>
