--- a/index_de.html
+++ b/index_de.html
@@ -30,9 +30,13 @@
                     </tr>
                 </table></li>
             </ul>
-            <div class="blue">
+            <div class="white">
                 <ul>
                     <li class="menulinklang"><a class="menulinklang" href="./index.html">EN</a> | DE</li>
+                </ul>
+            </div>
+            <div class="blue">
+                <ul>
                     <li class="menulink"><a class="menulink" href="./index_de.html#Kontakt">Kontakt</a></li>
                     <li class="menulink"><a class="menulink" href="./index_de.html#Skills">Fähigkeiten</a></li>
                     <li class="menulink"><a class="menulink" href="./index_de.html#Erfahrungen">Erfahrungen</a></li>
@@ -68,19 +72,19 @@
                <br>Bei Interesse kontaktieren Sie mich:</p>
             <table>
                 <tr>
-                    <td colspan="2">Dipl.-Inf. Pierre Voigtländer</td>
+                    <td class="address" colspan="2">Dipl.-Inf. Pierre Voigtländer</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td>+49-162-5878472</td>
+                    <td class="address">+49-162-5878472</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
+                    <td class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
                 </tr>
             </table>
             <br>
@@ -316,11 +320,11 @@
             Verantwortlich für den Inhalt dieses Webauftritts ist:<br>
             <table>
                 <tr>
-                    <td colspan="2"><div>Pierre Voigtländer</div></td>
+                    <td class="address" colspan="2"><div>Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td>Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
@@ -328,11 +332,11 @@
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="datenschutz-email" height="20"></td>
-                    <td> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td class="address"> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
                 </tr>
             </table>
             <br><br>
