Update contact data add spelling improvements

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <img style="float:left;margin-right:10px;margin-bottom:10px" src="./img/me.jpg" alt="pierre@cppdev.de" height="230">
             <div class="whitewithheight">
             <p>I am a passionate C++ developer, Conan advocate and Jenkins user.
-            The first Microsoft Visual Studio version I have used was Visual Studio 6.
-            C++ was a dying programming language until 12 August 2011, when the C++11 Standard was approved.
-            Since then I am excited how great the ISO C++ committee works and how fast the C++ community grows.
-            I recommend to attend the <a class="intext" href="https://meetingcpp.com/" target="_blank">Meeting CPP</a> in Berlin where you are able to get in touch with them:
+            The first Microsoft Visual Studio version I used was Visual Studio 6.
+            C++ was a dying programming language until 12 August 2011, when the C++11 standard was approved.
+            Since then I have been excited how great the ISO C++ committee works and how fast the C++ community is growing.
+            I highly recommend to attend the <a class="intext" href="https://meetingcpp.com/" target="_blank">Meeting CPP</a> in Berlin where you are able to get in touch with them:
             </p>
             <p>
             <a class="intext" href="https://www.youtube.com/watch?v=OAmWHmwlMwI" target="_blank">"Crazy Code, Crazy Coders" - Walter E. Brown</a><br>
@@ -67,22 +67,22 @@
             <a name="Contact"></a>
             <h1 class="menu">Contact</h1>
 
-            <p>As software engineer and freelancer I would be glad to support your software project and C++ project.<br>Do not hesitate to contact me:</p>
+            <p>As an advanced software engineer and freelancer I would be happy to provide support with any of your software project and C++ project.<br>Please feel free to contact me:</p>
             <table>
                 <tr>
-                    <td class="address" colspan="2"><div>Dipl.-Inf. Pierre Voigtländer</div></td>
+                    <td colspan="2"><div class="address">Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td><div class="address">Kothauer Str. 59<br>85053 Ingolstadt</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td class="address">+49-162-5878472</td>
+                    <td><div class="address">+49-162-5878472</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
+                    <td><div class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br>
@@ -167,11 +167,11 @@
                 <div class="expitem">
                     <h3 class="menu">Sept 2007 - Dec 2016</h3>
                     <p>Software Architect and Developer of Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF Version 2</a>).
-                        The ADTF 2 was the first official Rapid Prototyping Tool on market for customized automotive applications which runs on Windows as well as Linux with the same code.
+                        The ADTF 2 was the first official Rapid Prototyping Tool introduced to the market for customized automotive applications which runs on Windows as well as Linux with the same code.
                         For more information see <a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF 2 Documentation</a>.
                      </p>
-                     <p>Software Architect and Developer of Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF Version 3</a>). The ADTF 3 is a fully redesign of ADTF 2 
-                        in case of modern C++, build system, const correct API, interprocess design, distributions and many more things.
+                     <p>Software Architect and Developer of Automotive Data and Time-Triggered Framework (<a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF Version 3</a>). The ADTF 3 is a full redesign of ADTF 2 
+                        in terms of modern C++, build system, const correct API, interprocess design, distributions amongst other things.
                         For more information see <a href="https://support.digitalwerk.net/adtf/v3/guides/index.html" target="_blank">ADTF 3 Documentation</a>.
                      </p>
                      <div class="usedskills">
@@ -186,13 +186,13 @@
                 <div class="expitem">
                     <h3 class="menu">Jun 2005 - Aug 2007</h3>
                     <p>Developer in the DevOps Team of the Automotive Data and Time-Triggered Framework (ADTF Version 1) which was the first tool enabling AUDI to record raw video frames 
-                        together with CAN messages in a time synchronous way into one single streaming based file (also called Drive Recorder).
+                        together with CAN messages in a time synchronous way into a single streaming based file (also called Drive Recorder).
                     </p>
                     <p>Developer in the DevOps Team of the Automotive Data and Time-Triggered Framework (ADTF Version 2).
-                        The ADTF 2 was the first official Rapid Prototyping Tool on market for customized automotive applications which runs on Windows as well as Linux with the same code. 
+                        The ADTF 2 was the first official Rapid Prototyping Tool introduced to the market for customized automotive applications which runs on Windows as well as Linux with the same code. 
                         For more information see <a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/index.html" target="_blank">ADTF 2 Documentation</a>.
                      </p>
-                     <p>Developing a cross platform library to wrap threading, string, file system access, socket operations
+                     <p>Developing a cross platform library to wrap threading, string, file system access and socket operations.
                         For more information see <a href="https://support.digitalwerk.net/adtf/v2/adtf_sdk_html_docs/page_a_utils_sdk.html" target="_blank">ADTF Utils Library Documentation</a>.
                      </p>
                      <div class="usedskills">
@@ -205,8 +205,8 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">May 2004 - May 2005</h3>
-                    <p>Supporting Microsoft Excel VBScripting tool that records project times for invoicing.</p>
-                    <p>Developing MATLAB S-Function extensions in C++ for a Data Dictionary Application that parameterize Simulink Models.</p>
+                    <p>Supporting Microsoft Excel VBScripting tool which records project times for invoicing.</p>
+                    <p>Developing MATLAB S-Function extensions in C++ for a Data Dictionary Application that parameterizes Simulink Models.</p>
                     <p>DevOps for MATLAB figure scripts to support Adaptive Cruise Control development.</p>
                     <p>Developing and supporting of NI LabView models for customized CAN bus signal visualizations and analyzing tools.</p>
                     <div class="usedskills">
@@ -219,7 +219,7 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Dec 2003 - Mar 2004</h3>
-                    <p>Programming of data analizing and vizualization tools to reuse archieved backup files.
+                    <p>Programming of data analizing and vizualization tools to retrieve data from archieved backup files.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6
@@ -230,7 +230,7 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">May 2002 - Jul 2002</h3>
-                    <p>Programming of test software to create and run statistic tests of a simple on-board random number generator.</p>
+                    <p>Programming of test software to create and run statistical tests of a simple on-board random number generator.</p>
                     <div class="usedskills">
                         (C++98) - Microsoft Visual C++ 6, Microsoft Visual Studio 6, Microsoft Windows API
                     </div>
@@ -241,7 +241,7 @@
                 <div class="expitem">
                     <h3 class="menu">Aug 2001 - Apr 2002</h3>
                     <p>Programming of several file conversion tools from a vendor specific product catalog format (XML, BMEcat)
-                    into a CSV to import it to the PC Ware product database.
+                    into a CSV for import it into the PC Ware product database.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6
@@ -252,7 +252,7 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Oct 2000 - Feb 2001</h3>
-                    <p>Supporting web development department in programming conversion and importing tools to add items to the catalog of the product database.
+                    <p>Supporting the web development department in programming conversion and importing tools to add items into the catalog of the product database.
                     </p>
                     <div class="usedskills">
                     Microsoft Visual Studio 6, Microsoft Visual Basic 6, SQL Server 7.0
@@ -300,9 +300,10 @@
         <div class="white">
             <a name="Interests"></a>
             <h1 class="menu">Interests</h1>
-            After spending my time with my family I am an enthusiastic rower at <a href="https://drci.de" target="_blank" class="intext">Donau Ruder Club Ingolstadt e.V.</a>.
-            There, I take care about the IT, the social media presentation and row on our beautiful Donau river in Ingolstadt in a team boat or a single scull.
-            The most fascinating <a href="https://www.youtube.com/watch?v=mxNThmWIYYU&t=84" target="_blank" class="intext">kind of boat is the 2- (coxless pair)</a> where you really need a good partner you can trust 100 percent. I am glad to found one.
+            Besides enjoying spending time with my family, I am an enthusiastic rower at the <a href="https://drci.de" target="_blank" class="intext">Donau Ruder Club Ingolstadt e.V.</a>.
+            As one of their members, I maintain the clubs IT and social media accounts and row on our beautiful Donau river in Ingolstadt in either a team boat or a single scull.
+            The most fascinating kind of boat to me is the <a href="https://www.youtube.com/watch?v=mxNThmWIYYU&t=84" target="_blank" class="intext"></a>2- (coxless pair)</a>,
+            where you really need a partner that you can trust 100 percent. I am happy to have found one.
             <br>
             <br>
         </div>
@@ -312,26 +313,26 @@
         <div class="white">
             <a name="Imprint"></a>
             <h1 class="menu">Imprint</h1>
-            Responsible for the content of this website is:<br>
+            The individual responsible for the content of this website is:<br>
             <table>
                 <tr>
-                    <td class="address" colspan="2"><div>Pierre Voigtländer</div></td>
+                    <td colspan="2"><div class="address">Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td><div class="address">Kothauer Str. 59<br>85053 Ingolstadt</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td class="address">+49-162-5878472</td>
+                    <td><div class="address">+49-162-5878472</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td><div class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/email.png" alt="datenschutz-email" height="20"></td>
-                    <td class="address"> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td><img src="./img/links/email.png" alt="email" height="20"></td>
+                    <td><div class="address">Datenschutz: <a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br><br>
