--- a/index_de.html
+++ b/index_de.html
@@ -70,21 +70,21 @@
 
             <p>Gerne würde ich Ihr Software- und C++-Projekt mit meiner Expertise als Software Entwickler und Freiberufler unterstützen.
                <br>Bei Interesse kontaktieren Sie mich:</p>
-            <table>
+               <table>
                 <tr>
-                    <td class="address" colspan="2">Dipl.-Inf. Pierre Voigtländer</td>
+                    <td colspan="2"><div class="address">Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td><div class="address">Kothauer Str. 59<br>85053 Ingolstadt</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td class="address">+49-162-5878472</td>
+                    <td><div class="address">+49-162-5878472</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></td>
+                    <td><div class="address"><a class="intext" href="mailto:pierre@cppdev.de">pierre@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br>
@@ -255,7 +255,7 @@
             <div class="skillitem">
                 <div class="expitem">
                     <h3 class="menu">Oct 2000 - Feb 2001</h3>
-                    <p>Unterstützung der WEB Entwicklungsabteilung bei der Programmierung von Konvertierungs- und Importwerkzeugen von zuliefererspezifischen Produktkatalogen
+                    <p>Unterstützung der WEB-Entwicklungsabteilung bei der Programmierung von Konvertierungs- und Importwerkzeugen von zuliefererspezifischen Produktkatalogen
                         in den SCAN Computers Produktkatalogdatenbank .
                     </p>
                     <div class="usedskills">
@@ -320,23 +320,23 @@
             Verantwortlich für den Inhalt dieses Webauftritts ist:<br>
             <table>
                 <tr>
-                    <td class="address" colspan="2"><div>Pierre Voigtländer</div></td>
+                    <td colspan="2"><div class="address">Dipl.-Inf. Pierre Voigtländer</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/mail.jpg" alt="address" height="20"><br><br></td>
-                    <td class="address">Kothauer Str. 59<br>85053 Ingolstadt</td>
+                    <td><div class="address">Kothauer Str. 59<br>85053 Ingolstadt</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/phone.png" alt="phone" height="20"></td>
-                    <td>+49-162-5878472</td>
+                    <td><div class="address">+49-162-5878472</div></td>
                 </tr>
                 <tr>
                     <td><img src="./img/links/email.png" alt="email" height="20"></td>
-                    <td class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td><div class="address"><a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
                 </tr>
                 <tr>
-                    <td><img src="./img/links/email.png" alt="datenschutz-email" height="20"></td>
-                    <td class="address"> Datenschutz:<a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></td>
+                    <td><img src="./img/links/email.png" alt="email" height="20"></td>
+                    <td><div class="address">Datenschutz: <a class="intext" href="mailto:info@cppdev.de">info@cppdev.de</a></div></td>
                 </tr>
             </table>
             <br><br>
